# decoder-transformer

./: .gitignore  Attention_Mechanism_Debug.ipynb  DecoderTransformer_Walkthrough.ipynb  decoder-transformer.cabal  rpg-evaluation-tokenized.txt  rpg-training-tokenized.txt  rpg-training.txt  stack.yaml
app/: Main.hs
scripts/: TokenizeHS.hs  TokenizeRPG.hs
src/: DecoderTransformer.hs
